# libfixposix

./: Makefile.am  configure.ac
config/m4/: custom_checks.m4
